--- a/pizza/style2.css
+++ b/pizza/style2.css
@@ -22,12 +22,13 @@
     font-style: normal;
     font-weight: normal;
 }
-.titre
-{   
-    font-size: 35px;
-    color: #EEB41F;
-    font-family: quicksands_semibold;
+@font-face {
+        font-family: "quicksands_light";
+        src: url(Quicksand-Light.ttf);
+        font-style: normal;
+        font-weight: normal;
 }
+
 
 body{
     padding: 0px;
@@ -36,8 +37,10 @@ body{
 
 
 
-h2{
+header h2{
     margin-top: 0;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
 }
 
 /* Contient barre de nav, image , h1 et bouton */
@@ -47,13 +50,13 @@ header{
     margin: 0;
 }
 
-nav{
+#barrenavhaut{
     position: absolute;
     z-index: 1;
     top: 0;
     right: 0;
 }
-nav ul li a{
+.lienbarrenavhaut{
     
     text-decoration: none;
     font-size: 18px;
@@ -62,13 +65,13 @@ nav ul li a{
   
     
 }
-nav ul li{
+.libarrenavhaut{
     font-family: quicksands;
     padding-top: 0;
     display: inline-block;
     margin-top: 10px;
 }
-ul{
+.ulbarrenavhaut{
     background-color: #EEB41F;
     float: right;
     padding-top: 0;
@@ -105,7 +108,7 @@ h1{
     padding-left: 200px;
     font-family: rubik;
     font-size: 120px;
-    font-weight: 100;
+    font-weight: bold;
     color: white;
     letter-spacing: 10px;
     
@@ -114,9 +117,9 @@ h1{
 #accueilbutton{
     position: relative;
     font-weight: bold;
-    font-family: quicksands;
-    bottom: 100px;
-    padding: 20px;
+    font-family: quicksands_light;
+    bottom: 130px;
+    padding: 15px 20px 15px 20px;
     background-color: #EEB41F;
     font-size: 30px;
     margin-left: 200px;
@@ -160,16 +163,27 @@ h1{
 
 #section1{
     margin-top: 100px;
-    padding-left: 50px;
-    background-color: #EEB41F;
-    height: 400px;
+    margin-left: 55px;
+    
+    height: 200px;
     width: 40%;
     color: white;
     padding-left: 250px;
     padding-right: 100px;
     font-family: quicksands;
     font-size: 26px;
+    z-index: 1;
 }
+#jaune{
+    
+    position: absolute;
+    margin-top: 200px;
+    background-color: #EEB41F;
+    height: 175px;
+    width: 52%;
+    margin-left: 150px;
+}
+
 #section2{
     margin-top: 100px;
     padding-left: 50px;
@@ -178,9 +192,15 @@ h1{
 }
 #nouveaute{
     padding-top: 40px;
-    font-family: quicksands;
+    font-family: quicksands_light;
     margin-bottom: 30px;
     font-size: 30px;
+}
+#listnouveaute{
+    list-style-type: '|'
+}
+.listenouveauteli{
+    padding-left: 15px;
 }
 .rogner{
     object-fit: cover;
@@ -189,4 +209,168 @@ h1{
     width: 100%;
     height: 400px;
 
+}
+#rotation{
+    
+    transform: rotate(-90deg);
+    padding-left: 0px;
+    color: white;
+    font-size: 32px;
+    padding-top: 220px;
+    
+}
+#rotationdiv{
+    padding-top :45px;
+    font-family: quicksands;
+    left: -100px;
+    position: absolute;
+    width: 400px;
+    height: 100px;
+    z-index: 2;
+}
+
+/* Contient les 3 Titres + les 3 paragraphes */
+
+#titre4{
+    font-family: quicksands;
+    display: flex;
+    padding-top: 200px;
+    padding-bottom: 100px;
+    font-size: 18px;
+
+}
+
+#titre1{
+    padding-left: 250px;
+    
+}
+#titre2{
+    padding-left: 150px;
+    
+}
+#titre3{
+    padding-left: 150px;
+    
+    padding-right: 250px;
+}
+.titre
+{   
+    margin-bottom: 15px;
+    padding-bottom: 0px;
+    font-size: 35px;
+    color: #EEB41F;
+    font-family: quicksands_semibold;
+}
+.paragraphetitre{
+    margin-top: 0;
+}
+/* l'id "nospizza" comprend le titre + les 3 immages */
+
+#nospizza{
+    background-color: #1E1E1E;
+    
+}
+#pizza{
+    padding-top: 50px;
+    color: white;
+    font-family: rubik;
+    font-size: 80px;
+    padding-left: 50px;
+    padding-bottom: 120px;
+    margin-bottom: 0px;
+    
+}
+#images3{
+    display: flex;
+}
+.image1{
+    object-fit: cover;
+    padding-left: 50px;
+    width: 500px;
+    height: 400px;
+    padding-bottom: 250px;
+}
+
+.image2{
+    object-fit: cover;
+    padding-left: 150px;
+    width: 500px;
+    height: 700px;
+    padding-bottom: 250px;
+}
+
+.image3{
+    margin-top: 485px;
+    object-fit: cover;
+    padding-left: 150px;
+    width: 500px;
+    height: 400px;   
+}
+
+/* Footer comprend image, adresse, réseaux sociaux */
+article {
+    display: flex;
+}
+
+.imgfooter{
+    padding-top: 120px;
+    padding-left: 120px;
+    height: 600px;
+    width: 700px;
+    margin-bottom: 100px;
+}
+
+
+article p{
+    font-family: quicksands;
+    padding-left: 100px;
+    padding-top: 250px;
+    font-size:28px;
+}
+#tel{
+    padding-top: 0px;
+    padding-left: 150px;
+}
+
+
+/* Div jaune pour réseau sociaux */
+
+#social{
+   background-color: #EEB41F;
+   width: 300px;
+   height: 70px;
+   position: absolute;
+   right: 0px;
+   margin-top: 500px;
+
+}
+
+.facebook{
+    padding-top: 10px;
+    font-size: 50px;
+    color: white;
+    padding-left: 30px;
+}
+
+.fb{
+    padding-right: 20px;
+}
+
+#petitebarre{
+    background-color: #3E3A35;
+    height: 60px;
+    
+}
+
+
+footer nav a{
+    text-decoration: none;
+    color: white;
+}
+footer nav{
+    padding-top: 10px;
+    color: white;
+    text-align: center;
+    font-size: 22px;
+    font-family: quicksands_light;
 }
